# rust-torrent-parser

./: Cargo.toml  README.md  sample.torrent
src/: main.rs  torrent_struct.rs
